# DaydreamerH.github.io

./: .gitignore  README.md  astro.config.mjs  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
about/: index.html
archives/: index.html
archives/2023/: index.html
archives/2023/10/: index.html
archives/2023/11/: index.html
archives/2023/12/: index.html
archives/2024/: index.html
archives/2024/02/: index.html
archives/2024/03/: index.html
archives/2024/04/: index.html
archives/2024/05/: index.html
archives/2024/06/: index.html
archives/2024/10/: index.html
archives/page/2/: index.html
categories/C-快速入门/: index.html
categories/PyTorch学习/: index.html
categories/《深度学习》/: index.html
categories/人工智能/: index.html
categories/套接字编程/: index.html
categories/学校科目/: index.html
categories/政治课复习/: index.html
categories/杂七杂八/: index.html
categories/计算机操作系统/: index.html
categories/计算机视觉/: index.html
categories/闲来无事随笔/: index.html
categories/项目开发/: index.html
categories/马原/: index.html
css/: style.css
docs/: blog-topic-audit-2026-06-28.md  graphics-lesson-pipeline.md
link/: index.html
page/2/: index.html
page/3/: index.html
page/4/: index.html
page/5/: index.html
scripts/: astro-cli.mjs  generate-card-banners.mjs  generate-graphics-lesson.mjs  new-post.mjs  record-review.mjs  verify-graphics-lab.mjs
src/components/: ChatSurface.astro
src/content/: config.ts
src/content/knowledge/: modern-cpp-raii.md  portfolio-demo-scope.md  ue-cpp-reflection.md  ue-gameplay-framework.md
src/data/: graphicsLessons.ts  navigation.ts  reviews.ts
src/graphics-lesson-recipes/blending/: recipe.json
src/graphics-lesson-recipes/blinn-phong/: recipe.json
src/graphics-lesson-recipes/bloom/: recipe.json
src/graphics-lesson-recipes/camera/: recipe.json
src/graphics-lesson-recipes/color/: recipe.json
src/graphics-lesson-recipes/coordinate-systems/: recipe.json
src/graphics-lessons/blending/reference/: CMakeLists.txt  grass.cpp  singleColor.fs  singleColor.vs  source-notes.md  window.cpp
src/graphics-lessons/blinn-phong/reference/: CMakeLists.txt  blinn_phong.fs  main.cpp  source-notes.md
src/graphics-lessons/bloom/reference/: CMakeLists.txt  bloom.fs  bloom.vs  bloom_final.fs  blur.fs  light_box.fs  main.cpp  source-notes.md
src/graphics-lessons/camera/reference/: CMakeLists.txt  camera.fs  camera_control.cpp  source-notes.md
src/graphics-lessons/color/reference/: CMakeLists.txt  color.cpp  color.fs  source-notes.md
src/graphics-lessons/coordinate-systems/reference/: CMakeLists.txt  coordinate.vs  source-notes.md  strange_box.cpp
src/graphics-lessons/cubemaps/reference/: CMakeLists.txt  skybox.cpp  source-notes.md
src/graphics-lessons/cull-face/reference/: CMakeLists.txt  main.cpp  source-notes.md
src/graphics-lessons/deferred-shading/reference/: CMakeLists.txt  deferred_shading.fs  main.cpp  source-notes.md
src/graphics-lessons/depth-testing/reference/: CMakeLists.txt  main.cpp  shader.fs  source-notes.md
src/graphics-lessons/frame-buffers/reference/: CMakeLists.txt  frame_buffers.cpp  shader_screen.fs  source-notes.md
src/graphics-lessons/gamma-correction/reference/: CMakeLists.txt  gamma_correction.fs  main.cpp  source-notes.md
src/graphics-lessons/geometry-shader/reference/: CMakeLists.txt  geometry_shader.cpp  geometry_shader.vs  source-notes.md
src/graphics-lessons/hdr/reference/: CMakeLists.txt  hdr.fs  lighting.fs  lighting.vs  main.cpp  source-notes.md
src/graphics-lessons/instancing/reference/: CMakeLists.txt  instancing_quads.cpp  source-notes.md
src/graphics-lessons/light-casters/reference/: CMakeLists.txt  directional.cpp  directional_cube.fs  point_cube.cpp  point_cube.fs  source-notes.md  spot_cube.cpp  spot_cube.fs
src/graphics-lessons/light/reference/: CMakeLists.txt  cube.fs  main.cpp  source-notes.md
src/graphics-lessons/lighting-maps/reference/: CMakeLists.txt  cube.fs  main.cpp  source-notes.md
src/graphics-lessons/material/reference/: CMakeLists.txt  cube.fs  main.cpp  source-notes.md
src/graphics-lessons/msaa/reference/: CMakeLists.txt  msaa.cpp  source-notes.md
src/graphics-lessons/multiple-lights/reference/: CMakeLists.txt  cube.fs  cube.vs  main.cpp  source-notes.md
src/graphics-lessons/normal-mapping/reference/: CMakeLists.txt  main.cpp  norm_mapping.fs  norm_mapping.vs  source-notes.md
src/graphics-lessons/parallax-mapping/reference/: CMakeLists.txt  parallax_mapping.cpp  parallax_mapping.fs  source-notes.md
src/graphics-lessons/point-shadows/reference/: CMakeLists.txt  main.cpp  point_shadows.fs  point_shadows.vs  source-notes.md
src/graphics-lessons/shaders/reference/: CMakeLists.txt  shader_uniform.cpp  source-notes.md  vertex_attributes.cpp
src/graphics-lessons/shadow-mapping/reference/: CMakeLists.txt  debug_quad.fs  main.cpp  shadow_mapping.fs  source-notes.md
src/graphics-lessons/ssao/reference/: CMakeLists.txt  main.cpp  source-notes.md  ssao.fs  ssao_geometry.vs  ssao_lighting.fs
src/graphics-lessons/stencil-testing/reference/: CMakeLists.txt  main.cpp  source-notes.md
src/graphics-lessons/textures/reference/: CMakeLists.txt  mix_image.cpp  source-notes.md  texture.fs
src/graphics-lessons/transformations/reference/: CMakeLists.txt  source-notes.md  transform.cpp  transform.vs
src/layouts/: BaseLayout.astro
src/pages/: coach.astro  index.astro  webgl.astro
src/scripts/: graphics-lab.ts
src/styles/: global.css
tags/AI/: index.html
tags/JavaWeb/: index.html
tags/MySQL/: index.html
tags/OS/: index.html
tags/PyTorch/: index.html
tags/Unity/: index.html
tags/Vue/: index.html
tags/c/: index.html
tags/cv/: index.html
tags/flask/: index.html
tags/java/: index.html
tags/mysql/: index.html
tags/nlp/: index.html
tags/socket/: index.html
tags/sockey/: index.html
tags/stable-diffusion/: index.html
tags/uni-app/: index.html
tags/内存/: index.html
tags/机器学习/: index.html
tags/毛概/: index.html
tags/物理/: index.html
tags/线程/: index.html
tags/进程/: index.html
tags/马原/: index.html
(+470 files in other folders)
